frontend pages added with testcases

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,5 +7,12 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "types": ["jest", "@testing-library/jest-dom"],
+    "esModuleInterop": true,
+    "jsx": "react",
+    "strict": true
+    // other options...
+  }
 }
