docker-compose set

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,10 +10,16 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+# Add node_modules/.bin to PATH to ensure Vite is found
+ENV PATH /app/node_modules/.bin:$PATH
+
+# Install the Rollup binary if on linux/arm64
+RUN if [ "$(uname -m)" = "aarch64" ]; then npm install @rollup/rollup-linux-arm64-gnu; fi
+
 # Copy the rest of the application code to the working directory
 COPY . .
 
-# Run tests
+# Run tests (optional)
 RUN npm run test
 
 # Expose port 5173 to the outside world
