--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "5173:5173"
     volumes:
       - ./app:/app
+      - /app/node_modules
     networks:
       - app-network
     environment:
