--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preinstall": "if [ $(uname -m) = 'arm64' ]; then npm install @rollup/rollup-linux-arm64-gnu@4.19.0; fi",
     "preview": "vite preview",
     "test": "jest"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.3.4",
     "@types/react-leaflet": "^3.0.0",
     "axios": "^1.7.2",
     "leaflet": "^1.9.4",
@@ -46,5 +49,8 @@
     "ts-jest": "^29.2.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
