--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,4 +1,4 @@
-# Use the official Python image from the Docker Hub
+# Stage 1: Build Stage
 FROM python:3.9-slim
 
 # Set the working directory in the container
@@ -15,6 +15,9 @@ RUN pip install pytest
 
 # Copy the rest of the application code into the container
 COPY . .
+
+# Install curl
+RUN apt-get update && apt-get install -y curl
 
 # Expose port 8000 for the Flask application
 EXPOSE 8000
